--- a/notebooks/solusion1.ipynb
+++ b/notebooks/solusion1.ipynb
@@ -45,6 +45,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df = raw_df.rename(columns={'ItemID': \"id\", \"Sentiment\": \"sentiment\", \"SentimentText\": \"text\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(raw_df[['id', 'text']], raw_df[['sentiment']], test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.to_csv('../data/processed/x_train.csv', index=False)\n",
+    "X_test.to_csv('../data/processed/x_test.csv', index=False)\n",
+    "y_train.to_csv('../data/processed/y_train.csv', index=False)\n",
+    "y_test.to_csv('../data/processed/y_test.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
