--- a/notebooks/solusion1.ipynb
+++ b/notebooks/solusion1.ipynb
@@ -9,21 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from src.preprocessing import normalize_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_df = pd.read_csv('../data/raw/train.csv', encoding = \"ISO-8859-1\")"
+    "from src.preprocessor import Preprocessor\n",
+    "from src.settings.preprocessor import PreprocessorSettings"
    ]
   },
   {
@@ -32,7 +24,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_df['SentimentText'] = raw_df['SentimentText'].apply(lambda x: normalize_text(x).strip())"
+    "prep_settings = PreprocessorSettings(use_normalization=True, use_lemmatization=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = Preprocessor(prep_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df = pd.read_csv('../data/raw/train.csv', encoding = \"ISO-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_df['SentimentText'] = raw_df['SentimentText'].apply(lambda x: preprocessor.normalize_text(x).strip())"
    ]
   },
   {
@@ -91,11 +110,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import Tf"
+   ]
   }
  ],
  "metadata": {
