--- a/notebooks/solusion1.ipynb
+++ b/notebooks/solusion1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +90,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(raw_df[['id', 'text']], raw_df[['sentiment']], test_size=0.33, random_state=42)"
+    "# X_train, X_test, y_train, y_test = train_test_split(raw_df[['id', 'text']], raw_df[['sentiment']], test_size=0.33, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(raw_df['text'], raw_df['sentiment'], test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +127,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import Tf"
+    "from src.classifier import Classifier\n",
+    "from src.settings.classifier import ClassifierSettings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_settings = ClassifierSettings(n_estimators=100, max_depth=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = Classifier(model_settings=model_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier.fit(X_train[:10], y_train[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.67      0.70     14470\n",
+      "           1       0.76      0.82      0.79     18527\n",
+      "\n",
+      "    accuracy                           0.75     32997\n",
+      "   macro avg       0.75      0.74      0.74     32997\n",
+      "weighted avg       0.75      0.75      0.75     32997\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.67      0.70     14470\n",
+      "           1       0.76      0.82      0.79     18527\n",
+      "\n",
+      "    accuracy                           0.75     32997\n",
+      "   macro avg       0.75      0.74      0.74     32997\n",
+      "weighted avg       0.75      0.75      0.75     32997\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "import pandas as pd\n",
+    "\n",
+    "predictions = classifier.predict(X_test)\n",
+    "\n",
+    "# Оценка результатов\n",
+    "print(classification_report(y_test, predictions))\n",
+    "\n",
+    "classifier.save(\"model.joblib\", \"vectorizer.joblib\")\n",
+    "\n",
+    "loaded_classifier = Classifier.load(\"model.joblib\", \"vectorizer.joblib\", model_settings=model_settings)\n",
+    "\n",
+    "# Проверка работоспособности загруженной модели\n",
+    "loaded_predictions = loaded_classifier.predict(X_test)\n",
+    "print(classification_report(y_test, loaded_predictions))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
