--- a/notebooks/solusion1.ipynb
+++ b/notebooks/solusion1.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,20 +137,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_settings = ClassifierSettings(n_estimators=100, max_depth=None)"
+    "model_settings = ClassifierSettings(n_estimators=100, max_depth=20, id2label={0: \"negative\", 1: \"positive\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier = Classifier(model_settings=model_settings)"
+    "classifier = Classifier.load(\"../models/exp_2\", model_settings=model_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PredictOutput(predictions='positive')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.predict(\"some\")"
    ]
   },
   {
