--- a/notebooks/solusion1.ipynb
+++ b/notebooks/solusion1.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_settings = PreprocessorSettings(use_normalization=True, use_lemmatization=False)"
+    "prep_settings = PreprocessorSettings(use_normalization=True, use_lemmatization=True)"
    ]
   },
   {
@@ -34,6 +34,63 @@
    "outputs": [],
    "source": [
     "preprocessor = Preprocessor(prep_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textblob import TextBlob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blob = TextBlob(\"rocks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blob.lem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\" \".join([word.lemmatize() for word in blob.words])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'corpus'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessor.lemmatize_text(\"corpora\")"
    ]
   },
   {
